plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'uk.gov.justice.laa.maat'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

def versions = [
		sentryVersion					 : "8.13.0",
		ojdbcVersion					 : "21.7.0.0",
		mapstructVersion				 : "1.6.3",
		crimeCommonsClasses				 : "4.11.1"
]

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation platform("io.sentry:sentry-bom:$versions.sentryVersion")
	implementation "io.sentry:sentry-spring-boot-starter-jakarta"
	implementation "io.sentry:sentry-logback"
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation "org.springframework.boot:spring-boot-starter-validation"
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation "com.oracle.database.jdbc:ojdbc11:$versions.ojdbcVersion"
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'org.apache.commons:commons-lang3:3.18.0'
	implementation "org.mapstruct:mapstruct:$versions.mapstructVersion"
	implementation "uk.gov.justice.service.laa-crime:crime-commons-classes:$versions.crimeCommonsClasses"

	compileOnly 'org.projectlombok:lombok'

	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor "org.mapstruct:mapstruct-processor:$versions.mapstructVersion"

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation "com.h2database:h2"
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}

tasks.named('test') {
	useJUnitPlatform()
}